--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,7 +13,6 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .row {
@@ -22,22 +21,29 @@ body {
   margin: -15px;
 }
 
-.col-lg-8,
-.col-lg-10 {
-  flex: 0 0 100%;
+.col-lg-8 {
+  flex: 0 0 66%;
   padding: 15px;
 }
 
-@media (min-width: 768px) {
+.col-lg-10 {
+  flex: 0 0 80%;
+  padding: 15px;
+}
+
+@media (max-width: 767px) {
   .col-lg-8,
   .col-lg-10 {
-    flex: 0 0 66.6666666667%;
+    flex: 0 0 100%;
+    padding: 15px;
   }
 }
 
-@media (min-width: 992px) {
+@media (max-width: 767px) {
+  .col-lg-8,
   .col-lg-10 {
-    flex: 0 0 83.3333333333%;
+    flex: 0 0 100%;
+    padding: 15px;
   }
 }
 
@@ -110,9 +116,18 @@ canvas {
 }
 
 @media (max-width: 820px) {
+  .hero {
+    padding: 0;
+  }
+
   .hero-wrapper {
     width: 100vw;
-    padding: 0px;
+    padding: 0;
+  }
+
+  .hero-content {
+    border: 1px solid white;
+    padding: 20px 40px;
   }
 
   .hero h1 {
