--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,9 +29,6 @@
   .header h5 {
     margin-bottom: 1em;
   }
-
-  .menu {
-  }
 }
 
 .header h5 {
@@ -40,13 +37,42 @@
 }
 
 .menu li a {
-  color: inherit;
-  text-decoration: none;
-  transition: color 0.3s ease, font-size 0.3s ease;
   font-size: 18px;
 }
 
-.menu li a:hover {
+/* anime */
+/*==================================================
+　5-3-1 中心から外に線が伸びる（下部）
+===================================*/
+
+.gnavi li a {
+  /*線の基点とするためrelativeを指定*/
+  position: relative;
+}
+
+.gnavi li.current a,
+.gnavi li a:hover {
   color: pink;
-  font-size: 20px;
+}
+
+.gnavi li a::after {
+  content: "";
+  /*絶対配置で線の位置を決める*/
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  /*線の形状*/
+  width: 80%;
+  height: 2px;
+  background: pink;
+  /*アニメーションの指定*/
+  transition: all 0.3s;
+  transform: scale(0, 1); /*X方向0、Y方向1*/
+  transform-origin: center top; /*上部中央基点*/
+}
+
+/*現在地とhoverの設定*/
+.gnavi li.current a::after,
+.gnavi li a:hover::after {
+  transform: scale(1, 1); /*X方向にスケール拡大*/
 }
