--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,6 +10,11 @@ body {
   color: white;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -23,7 +28,7 @@ body {
 
 .col-lg-8 {
   flex: 0 0 66%;
-  padding: 15px;
+  /* padding: 15px; */
 }
 
 .col-lg-10 {
@@ -35,14 +40,6 @@ body {
   .col-lg-8,
   .col-lg-10 {
     flex: 0 0 100%;
-    padding: 15px;
-  }
-}
-
-@media (max-width: 767px) {
-  .col-lg-8,
-  .col-lg-10 {
-    flex: 0 0 100%;
-    padding: 15px;
+    /* padding: 15px; */
   }
 }
