--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,6 +21,7 @@ a {
 }
 
 .row {
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   margin: -15px;
@@ -47,5 +48,113 @@ a {
     display: flex;
     flex-wrap: wrap;
     margin: 0px;
+  }
+}
+
+.about {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 2em;
+  margin-top: 2em;
+}
+
+.about-wrapper {
+}
+
+.about-title {
+  width: 100%;
+  padding: 30px 60px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.about-title .title {
+  border: 1px solid white;
+  width: fit-content;
+  padding: 30px 60px;
+}
+
+.about h2 {
+  font-size: 48px;
+}
+
+.about-content {
+  display: flex;
+}
+
+.about-image {
+  margin-left: 2em;
+}
+
+.about-image img {
+  border-radius: 50%;
+  width: 200px;
+  height: auto;
+  filter: grayscale(100%);
+}
+
+.about-desc {
+  margin-left: 2em;
+  margin-top: 2em;
+  text-align: left;
+}
+
+.about-desc p {
+  line-height: 2;
+  letter-spacing: 2px;
+}
+
+.about-desc h5 {
+  line-height: 2;
+  letter-spacing: 2px;
+}
+
+.skill-area {
+  /* border: 1px solid yellow; */
+  margin-top: 2em;
+}
+
+.skill-icons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.skill-icon {
+  font-size: 20px;
+}
+
+.skill-icon p {
+  font-size: 14px;
+}
+
+@media (max-width: 820px) {
+}
+
+@media (max-width: 820px) {
+  .about h2 {
+    font-size: 24px;
+  }
+
+  .about-content {
+    display: block;
+  }
+
+  .about-image {
+    margin-left: 0;
+  }
+
+  .about-desc {
+    padding: 2em;
+    margin: 0;
+    text-align: center;
+  }
+
+  .skill-icons {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
