--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -133,9 +133,6 @@ a {
 }
 
 @media (max-width: 820px) {
-}
-
-@media (max-width: 820px) {
   .about h2 {
     font-size: 24px;
   }
@@ -157,4 +154,33 @@ a {
   .skill-icons {
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+/* anime */
+/* 画面外にいる状態 */
+.fadein {
+  opacity: 0.1;
+  transform: translate(0, 50px);
+  transition: all 500ms;
+}
+
+/* 画面内に入った状態 */
+.fadein.scrollin {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+/* 2つ目の要素に200msのdelayをかける */
+#effect2 > div .fadein:nth-of-type(2) {
+  -moz-transition-delay: 200ms;
+  -webkit-transition-delay: 200ms;
+  -o-transition-delay: 200ms;
+  -ms-transition-delay: 200ms;
+}
+/* 3つ目の要素に400msのdelayをかける */
+#effect2 > div .fadein:nth-of-type(3) {
+  -moz-transition-delay: 400ms;
+  -webkit-transition-delay: 400ms;
+  -o-transition-delay: 400ms;
+  -ms-transition-delay: 400ms;
 }
