--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -52,45 +52,15 @@ a {
   }
 }
 
-.career-wrapper {
-  margin-top: 5em;
+/* anime */
+.wave {
+  position: relative;
+  height: 200px; /*何も表示されない場合は各波の親要素に高さを持たせましょう。*/
+  background: #fff; /*背景を塗りつぶして重ねた波を表現したい場合は、波を描画する親要素に波と同じ背景色を設定しましょう。*/
 }
-
-.career-title {
+canvas {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  padding: 30px 60px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-
-.career-title .title {
-  border: 1px solid white;
-  width: fit-content;
-  padding: 30px 60px;
-}
-
-.career h2 {
-  font-size: 48px;
-  /* letter-spacing: 2px; */
-}
-
-.career-content {
-  height: 600px;
-  display: flex;
-  /* border: 1px solid yellow; */
-}
-
-.career-content h2 {
-  font-size: 16px;
-}
-
-@media (max-width: 820px) {
-  .career h2 {
-    font-size: 24px;
-  }
-
-  .career-content {
-    display: block;
-  }
 }
