--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -26,28 +26,52 @@
   padding: 30px 60px;
 }
 
-.project h2 {
-  font-size: 48px;
+.project-container {
+  display: flex;
+  margin: 20px;
+  border: 1px solid #6b6b6b;
+  padding: 10px;
 }
 
-.project-content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-
-.project-image img {
+.project-thumbnail {
   width: 300px;
-  height: 300px;
-  object-fit: cover;
+  height: auto;
+  margin-right: 20px;
 }
 
-.project-image p {
-  margin-bottom: 2em;
+.project-details {
+  display: flex;
+  flex-direction: column;
 }
 
-.project-image .leftSide {
-  object-position: 0 0;
+.project-title {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.project-description {
+  font-size: 16px;
+  margin: 10px 0;
+  text-align: left;
+  line-height: 1.5;
+}
+
+.project-references {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-technologies {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-technology {
+  background-color: #f0f0f0;
+  color: black;
+  padding: 5px 10px;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 .project-links {
@@ -57,66 +81,22 @@
 }
 
 @media (max-width: 820px) {
-  .project h2 {
-    font-size: 24px;
+  .project-title .title {
+    font-size: 16px;
   }
 
-  .project-content {
-    display: block;
+  .project-container {
+    flex-direction: column;
+    align-items: center;
   }
 
-  .project-image {
-    margin-left: 0;
+  .project-thumbnail {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 
-  .project-content {
-    grid-template-columns: repeat(1, 1fr);
+  .project-details {
+    text-align: center;
   }
-}
-
-/* anime */
-.bgLR {
-  position: relative;
-}
-
-.bgLR span.mask {
-  position: relative;
-  display: block;
-  line-height: 0;
-  overflow: hidden;
-}
-
-.bgLR span.mask::before {
-  content: "";
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transition: 0.3s ease-in-out;
-  transform: translateX(-100%);
-  background: #333;
-  width: 100%;
-  height: 100%;
-}
-
-.bgLR:hover span.mask::before {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.bgLR span.cap {
-  position: absolute;
-  opacity: 0;
-  transition: 0.5s ease-in-out;
-  z-index: 3;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  line-height: 1.5;
-}
-
-.bgLR:hover span.cap {
-  opacity: 1;
 }
